fixed #5 and dark mode bug

--- a/src/components/_common/colors.scss
+++ b/src/components/_common/colors.scss
@@ -51,3 +51,4 @@ $dm-fore: #343a40;
 $dm-back: #181a1b;
 $dm-red:  #f25e76;
 $dm-text-muted: rgba(255, 255, 255, 0.5);
+$lm-text-muted: #65757d;
